changes to intro plus the addition of the CMIP forcing data, which still need to be run an checked

--- a/book/some_content/forcing/cmip_future.ipynb
+++ b/book/some_content/forcing/cmip_future.ipynb
@@ -3,22 +3,308 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Generate CMIP Future Forcing\n",
+   "source": [
+    "# Generate CMIP Future Forcing\n",
+    "\n",
+    "We will generate the CMIP6 future forcing climate scenarios in this notebook, this is done because this usually takes a bit longer, and you only want to do this once.\n",
+    "Then you want to move onto a new notebook where you load your saved data!\n",
+    "\n",
+    "We are going to need multiple things again:\n",
+    "- shapefile of the region of interest\n",
+    "- a time-window\n",
+    "- experiment: a certain climate scenario\n",
+    "- dataset\n",
+    "- an ensemble member\n",
+    "- grid\n",
+    "\n",
+    "Not all CMIP climate scenarios are available on all servers.\n",
+    "This means that you have to carefully choose the server, **disclaimer** that means that the datasets chosen here can also be faulty.\n",
+    "The amount of ensemble members also vary, these are handy if you want to get a statistically better result.\n",
+    "Grid options define how data is spatially represented—either on the model’s native grid or a regridded format (e.g., regular lat-lon). This affects data compatibility, resolution, and comparability between models."
+   ],
    "id": "4f885e1ca6a19bdf"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "6af36628dde24cd"
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Ignore user warnings :)\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "\n",
+    "# Required dependencies\n",
+    "from pathlib import Path\n",
+    "from cartopy.io import shapereader\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from rich import print\n",
+    "import xarray as xr\n",
+    "import shutil\n",
+    "import json\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import ewatercycle\n",
+    "import ewatercycle.forcing"
+   ],
+   "id": "6a5bbccaefa3914b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "First let us look at the possible datasets/ensemble members available.",
+   "id": "5ee29ca26075cfaa"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Read from the JSON file\n",
+    "with open(\"available_climate_datasets.json\", \"r\") as json_file:\n",
+    "    loaded_dict = json.load(json_file)\n",
+    "\n",
+    "# Convert lists back to sets\n",
+    "valid_cmip_datasets = {key: set(value) for key, value in loaded_dict.items()}\n",
+    "print(\"Valid CMIP6 datasets (as of July 2025):\", valid_cmip_datasets)"
+   ],
    "id": "a76ac65b6998c3e3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "So let us start with the region and the time-window + the paths we will be using:",
+   "id": "ab6af115f9bd8173"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# The name of the shapefile\n",
+    "shape_file_name = \"camelsgb_33039\"  # river: Bedford Ouse at Roxton, England\n",
+    "\n",
+    "# The path to the shapefiles\n",
+    "shapefile_path =  Path.home() / \"getting-started/book/some_content/forcing/shapefiles\" / f\"{shape_file_name}.shp\"  # check this directory yourself!\n",
+    "\n",
+    "# The time-window of the experiment\n",
+    "future_experiment_start_date = \"2050-01-01T00:00:00Z\"\n",
+    "future_experiment_end_date = \"2074-12-31T00:00:00Z\"\n",
+    "\n",
+    "# The path save directory of the CMIP data\n",
+    "forcing_path_CMIP = Path.home() / \"forcing\" / shape_file_name / \"CMIP6\"   # we do not use historical here, so we can use this as a default save path later on\n",
+    "forcing_path_CMIP.mkdir(exist_ok=True)"
+   ],
+   "id": "542f21ef5b0bc8d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Downloading the climate scenarios\n",
+    "CMIP datasets can be found [here](https://aims2.llnl.gov/nodes), sometimes their servers are unreachable.\n",
+    "CMIP has these climate scenarios based on carbon emissions, go [here](https://climate-scenarios.canada.ca/?page=cmip6-overview-notes) (or [here](https://www.dkrz.de/en/communication/climate-simulations/cmip6-en/the-ssp-scenarios)) to find out more!\n",
+    "Here I set up SSP1, 2 and 5:\n",
+    "\n",
+    "- **SSP1**: The sustainable and “green” pathway describes an increasingly sustainable world. Global commons are being preserved, the limits of nature are being respected. The focus is more on human well-being than on economic growth. Income inequalities between states and within states are being reduced. Consumption is oriented towards minimizing material resource and energy usage.\n",
+    "\n",
+    "- **SSP2**: The “Middle of the road” or medium pathway extrapolates the past and current global development into the future. Income trends in different countries are diverging significantly. There is a certain cooperation between states, but it is barely expanded. Global population growth is moderate, leveling off in the second half of the century. Environmental systems are facing a certain degradation.\n",
+    "\n",
+    "- **SSP3**: Regional rivalry. A revival of nationalism and regional conflicts pushes global issues into the background. Policies increasingly focus on questions of national and regional security. Investments in education and technological development are decreasing. Inequality is rising. Some regions suffer drastic environmental damage.\n",
+    "\n",
+    "- **SSP4**: Inequality. The chasm between globally cooperating developed societies and those stalling at a lower developmental stage with low income and a low level of education is widening. Environmental policies are successful in tackling local problems in some regions, but not in others.\n",
+    "\n",
+    "- **SSP5**: Fossil-fueled Development. Global markets are increasingly integrated, leading to innovations and technological progress. The social and economic development, however, is based on an intensified exploitation of fossil fuel resources with a high percentage of coal and an energy-intensive lifestyle worldwide. The world economy is growing and local environmental problems such as air pollution are being tackled successfully.\n",
+    "\n",
+    "The numbers behind the SSP1xx mean extra radiative forcing of $x.x$ $W/m^2$ by the year 2100. They come in at $1.9$, $2.6$, $3.4$, $4.5$, $6.0$, $7.0$ and $8.5$ $W/m^2$, more [*info*](https://www.dkrz.de/en/communication/climate-simulations/cmip6-en/the-ssp-scenarios).\n",
+    "\n",
+    "It is also possible to pick just one scenario and use different ensembles to reach a statistically better result!\n",
+    "\n",
+    "Since we are saving it to their respective folder we only have to run the data gathering **ONCE**.\n",
+    "As you will notice it will take a longer time to gather the forcing data.\n",
+    "After this gathering we will just be using the saved files, which should be done in a separate notebook, but is done in this notebook for the sake of simplicity."
+   ],
+   "id": "21ab43ddbd222a96"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# We will need to generate CMIP data and save it, to use it later.\n",
+    "# ONLY RUN THIS ONCE\n",
+    "# DO this for every experiment you want to do!\n",
+    "\n",
+    "# Generate SSP126 data and save it in the correct directory\n",
+    "cmip_dataset =  {\n",
+    "   'project': 'CMIP6',\n",
+    "   'activity': 'ScenarioMIP',\n",
+    "   'exp': 'ssp126',\n",
+    "   'mip': 'day',\n",
+    "   'dataset': 'MPI-ESM1-2-HR',\n",
+    "   'ensemble': 'r1i1p1f1',\n",
+    "   'institute': 'DKRZ',\n",
+    "   'grid': 'gn'\n",
+    "}\n",
+    "\n",
+    "CMIP_forcing = ewatercycle.forcing.sources[\"LumpedMakkinkForcing\"].generate(\n",
+    "   dataset=cmip_dataset,\n",
+    "   start_time=future_experiment_start_date,\n",
+    "   end_time=future_experiment_end_date,\n",
+    "   shape=shapefile_path,\n",
+    "   directory=forcing_path_CMIP / \"SSP126\",\n",
+    ")\n",
+    "\n",
+    "# Generate SSP245 data and save it in the correct directory\n",
+    "cmip_dataset =  {\n",
+    "   'project': 'CMIP6',\n",
+    "   'activity': 'ScenarioMIP',\n",
+    "   'exp': 'ssp245',\n",
+    "   'mip': 'day',\n",
+    "   'dataset': 'MPI-ESM1-2-HR',\n",
+    "   'ensemble': 'r1i1p1f1',\n",
+    "   'institute': 'DKRZ',\n",
+    "   'grid': 'gn'\n",
+    "}\n",
+    "\n",
+    "CMIP_forcing = ewatercycle.forcing.sources[\"LumpedMakkinkForcing\"].generate(\n",
+    "   dataset=cmip_dataset,\n",
+    "   start_time=future_experiment_start_date,\n",
+    "   end_time=future_experiment_end_date,\n",
+    "   shape=shapefile_path,\n",
+    "   directory=forcing_path_CMIP / \"SSP245\",\n",
+    ")\n",
+    "\n",
+    "# Generate SSP585 data and save it in the correct directory\n",
+    "cmip_dataset =  {\n",
+    "   'project': 'CMIP6',\n",
+    "   'activity': 'ScenarioMIP',\n",
+    "   'exp': 'ssp585',\n",
+    "   'mip': 'day',\n",
+    "   'dataset': 'MPI-ESM1-2-HR',\n",
+    "   'ensemble': 'r1i1p1f1',\n",
+    "   'institute': 'DKRZ',\n",
+    "   'grid': 'gn'\n",
+    "}\n",
+    "\n",
+    "CMIP_forcing = ewatercycle.forcing.sources[\"LumpedMakkinkForcing\"].generate(\n",
+    "   dataset=cmip_dataset,\n",
+    "   start_time=future_experiment_start_date,\n",
+    "   end_time=future_experiment_end_date,\n",
+    "   shape=shapefile_path,\n",
+    "   directory=forcing_path_CMIP / \"SSP585\",\n",
+    ")"
+   ],
+   "id": "e2d5c2ff4d00d58a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Normally you can look at the cmip forcing now, but we will first show you how to load the data and move on from there:\n",
+   "id": "999842cdc26b703d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Load the generated SSP126 data\n",
+    "ssp126_location = forcing_path_CMIP / \"SSP126\" / \"work\" / \"diagnostic\" / \"script\"\n",
+    "SSP126_CMIP_forcing = ewatercycle.forcing.sources[\"LumpedMakkinkForcing\"].load(directory=ssp126_location)\n",
+    "\n",
+    "# Load the generated SSP245 data\n",
+    "ssp245_location = forcing_path_CMIP / \"SSP245\" / \"work\" / \"diagnostic\" / \"script\"\n",
+    "SSP245_CMIP_forcing = ewatercycle.forcing.sources[\"LumpedMakkinkForcing\"].load(directory=ssp245_location)\n",
+    "\n",
+    "# Load the generated SSP585 data\n",
+    "ssp585_location = forcing_path_CMIP / \"SSP585\" / \"work\" / \"diagnostic\" / \"script\"\n",
+    "SSP585_CMIP_forcing = ewatercycle.forcing.sources[\"LumpedMakkinkForcing\"].load(directory=ssp585_location)"
+   ],
+   "id": "3d58e3989d35b916"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "print(SSP126_CMIP_forcing)\n",
+    "\n",
+    "print(SSP245_CMIP_forcing)\n",
+    "\n",
+    "print(SSP585_CMIP_forcing)"
+   ],
+   "id": "269f08d7dcdf6a6a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "So the LumpedMakkinkForcing stores the following:\n",
+    "1. pr: precipitation\n",
+    "2. tas: temperature\n",
+    "3. rsds: incoming shortwave radiation\n",
+    "4. evspsblpot: potential evaporation (note that this is calculated, using Makking)"
+   ],
+   "id": "7f9e9c75c38561e2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## The data\n",
+    "\n",
+    "We can 'easily' plot the data now!"
+   ],
+   "id": "135ad657a79faad1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "SSP126_CMIP_data = {'precipitation pr': xr.open_dataset(SSP126_CMIP_forcing['pr']),\n",
+    "             'temperature tas': xr.open_dataset(SSP126_CMIP_forcing['tas']),\n",
+    "             'incoming_shortwave_radiation rsds': xr.open_dataset(SSP126_CMIP_forcing['rsds']),\n",
+    "             'potential_evaporation evspsblpot': xr.open_dataset(SSP126_CMIP_forcing['evspsblpot'])\n",
+    "}\n",
+    "\n",
+    "all_CMIP_data = {'ssp126': {'precipitation pr': xr.open_dataset(SSP126_CMIP_forcing['pr']),\n",
+    "             'temperature tas': xr.open_dataset(SSP126_CMIP_forcing['tas']),\n",
+    "             'incoming_shortwave_radiation rsds': xr.open_dataset(SSP126_CMIP_forcing['rsds']),\n",
+    "             'potential_evaporation evspsblpot': xr.open_dataset(SSP126_CMIP_forcing['evspsblpot'])\n",
+    "                },\n",
+    "                   'ssp245': {'precipitation pr': xr.open_dataset(SSP245_CMIP_forcing['pr']),\n",
+    "             'temperature tas': xr.open_dataset(SSP245_CMIP_forcing['tas']),\n",
+    "             'incoming_shortwave_radiation rsds': xr.open_dataset(SSP245_CMIP_forcing['rsds']),\n",
+    "             'potential_evaporation evspsblpot': xr.open_dataset(SSP245_CMIP_forcing['evspsblpot'])\n",
+    "                },\n",
+    "                    'ssp585': {'precipitation pr': xr.open_dataset(SSP585_CMIP_forcing['pr']),\n",
+    "             'temperature tas': xr.open_dataset(SSP585_CMIP_forcing['tas']),\n",
+    "             'incoming_shortwave_radiation rsds': xr.open_dataset(SSP585_CMIP_forcing['rsds']),\n",
+    "             'potential_evaporation evspsblpot': xr.open_dataset(SSP585_CMIP_forcing['evspsblpot'])\n",
+    "                }\n",
+    "}\n",
+    "\n",
+    "plot_counter = 1\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "for climate_scenario, all_data in all_CMIP_data.items():\n",
+    "    for name, data in all_CMIP_data[climate_scenario].items():\n",
+    "        plt.subplot(2,2, plot_counter)\n",
+    "        data[name.split(\" \")[-1]].plot()\n",
+    "        plt.title(f\"{name.split(\" \")[0]}\")\n",
+    "        plot_counter += 1\n",
+    "\n",
+    "plt.suptitle(\"Future CMIP6 LumpedMakkink Data\", fontsize=20)\n",
+    "plt.tight_layout()"
+   ],
+   "id": "12666f42775137d5"
   }
  ],
  "metadata": {
