--- a/book/some_content/forcing/era5_forcing_own_shapefile.ipynb
+++ b/book/some_content/forcing/era5_forcing_own_shapefile.ipynb
@@ -84,15 +84,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The id of the camels region\n",
-    "camels_id = \"camelsgb_33039\"  # river: Bedford Ouse at Roxton, England\n",
+    "# The name of the shapefile\n",
+    "shape_file_name = \"camelsgb_33039\"  # river: Bedford Ouse at Roxton, England\n",
     "\n",
     "# The time-window of the experiment\n",
     "experiment_start_date = \"2000-08-01T00:00:00Z\"\n",
     "experiment_end_date = \"2005-08-31T00:00:00Z\"\n",
     "\n",
-    "# The path save directoty of the ERA5 data\n",
-    "forcing_path_ERA5 = Path.home() / \"forcing\" / camels_id / \"ERA5\" / \"own_shapefile\"\n",
+    "# The path save directory of the ERA5 data\n",
+    "forcing_path_ERA5 = Path.home() / \"forcing\" / shape_file_name / \"ERA5\" / \"own_shapefile\"\n",
     "forcing_path_ERA5.mkdir(exist_ok=True)"
    ]
   },
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "# The path to the shapefiles\n",
-    "shapefile_path =  Path.home() / \"getting-started/book/some_content/forcing/shapefiles\" / f\"{camels_id}.shp\"  # check this directory yourself!"
+    "shapefile_path =  Path.home() / \"getting-started/book/some_content/forcing/shapefiles\" / f\"{shape_file_name}.shp\"  # check this directory yourself!"
    ]
   },
   {
@@ -182,18 +182,18 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mLumpedMakkinkForcing\u001b[0m\u001b[1m(\u001b[0m\n",
-       "    \u001b[33mstart_time\u001b[0m=\u001b[32m'2000-08-01T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mend_time\u001b[0m=\u001b[32m'2005-08-31T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/forcing/camelsgb_33039/ERA5/own_shapefile/work/diagnostic/script'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mshape\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/getting-started/book/some_content/forcing/shapefiles/camelsgb_33039.shp'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mfilenames\u001b[0m=\u001b[1m{\u001b[0m\n",
-       "        \u001b[32m'pr'\u001b[0m: \u001b[32m'OBS6_ERA5_reanaly_1_day_pr_2000-2005.nc'\u001b[0m,\n",
-       "        \u001b[32m'tas'\u001b[0m: \u001b[32m'OBS6_ERA5_reanaly_1_day_tas_2000-2005.nc'\u001b[0m,\n",
-       "        \u001b[32m'rsds'\u001b[0m: \u001b[32m'OBS6_ERA5_reanaly_1_day_rsds_2000-2005.nc'\u001b[0m,\n",
-       "        \u001b[32m'evspsblpot'\u001b[0m: \u001b[32m'Derived_Makkink_evspsblpot.nc'\u001b[0m\n",
-       "    \u001b[1m}\u001b[0m\n",
-       "\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mLumpedMakkinkForcing\u001B[0m\u001B[1m(\u001B[0m\n",
+       "    \u001B[33mstart_time\u001B[0m=\u001B[32m'2000-08-01T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mend_time\u001B[0m=\u001B[32m'2005-08-31T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mdirectory\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/forcing/camelsgb_33039/ERA5/own_shapefile/work/diagnostic/script'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mshape\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/getting-started/book/some_content/forcing/shapefiles/camelsgb_33039.shp'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mfilenames\u001B[0m=\u001B[1m{\u001B[0m\n",
+       "        \u001B[32m'pr'\u001B[0m: \u001B[32m'OBS6_ERA5_reanaly_1_day_pr_2000-2005.nc'\u001B[0m,\n",
+       "        \u001B[32m'tas'\u001B[0m: \u001B[32m'OBS6_ERA5_reanaly_1_day_tas_2000-2005.nc'\u001B[0m,\n",
+       "        \u001B[32m'rsds'\u001B[0m: \u001B[32m'OBS6_ERA5_reanaly_1_day_rsds_2000-2005.nc'\u001B[0m,\n",
+       "        \u001B[32m'evspsblpot'\u001B[0m: \u001B[32m'Derived_Makkink_evspsblpot.nc'\u001B[0m\n",
+       "    \u001B[1m}\u001B[0m\n",
+       "\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -260,19 +260,19 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mLumpedMakkinkForcing\u001b[0m\u001b[1m(\u001b[0m\n",
-       "    \u001b[33mstart_time\u001b[0m=\u001b[32m'2000-08-01T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mend_time\u001b[0m=\u001b[32m'2005-08-31T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/forcing/camelsgb_33039/ERA5/own_shapefile/work/diagnostic/script'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mshape\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/mmelotto/forcing/camelsgb_33039/ERA5/own_shapefile/work/diagnostic/script/camelsgb_33039\u001b[0m\n",
-       "\u001b[32m.shp'\u001b[0m\u001b[1m)\u001b[0m,\n",
-       "    \u001b[33mfilenames\u001b[0m=\u001b[1m{\u001b[0m\n",
-       "        \u001b[32m'pr'\u001b[0m: \u001b[32m'OBS6_ERA5_reanaly_1_day_pr_2000-2005.nc'\u001b[0m,\n",
-       "        \u001b[32m'tas'\u001b[0m: \u001b[32m'OBS6_ERA5_reanaly_1_day_tas_2000-2005.nc'\u001b[0m,\n",
-       "        \u001b[32m'rsds'\u001b[0m: \u001b[32m'OBS6_ERA5_reanaly_1_day_rsds_2000-2005.nc'\u001b[0m,\n",
-       "        \u001b[32m'evspsblpot'\u001b[0m: \u001b[32m'Derived_Makkink_evspsblpot.nc'\u001b[0m\n",
-       "    \u001b[1m}\u001b[0m\n",
-       "\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mLumpedMakkinkForcing\u001B[0m\u001B[1m(\u001B[0m\n",
+       "    \u001B[33mstart_time\u001B[0m=\u001B[32m'2000-08-01T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mend_time\u001B[0m=\u001B[32m'2005-08-31T00:00:00Z'\u001B[0m,\n",
+       "    \u001B[33mdirectory\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/forcing/camelsgb_33039/ERA5/own_shapefile/work/diagnostic/script'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mshape\u001B[0m=\u001B[1;35mPosixPath\u001B[0m\u001B[1m(\u001B[0m\u001B[32m'/home/mmelotto/forcing/camelsgb_33039/ERA5/own_shapefile/work/diagnostic/script/camelsgb_33039\u001B[0m\n",
+       "\u001B[32m.shp'\u001B[0m\u001B[1m)\u001B[0m,\n",
+       "    \u001B[33mfilenames\u001B[0m=\u001B[1m{\u001B[0m\n",
+       "        \u001B[32m'pr'\u001B[0m: \u001B[32m'OBS6_ERA5_reanaly_1_day_pr_2000-2005.nc'\u001B[0m,\n",
+       "        \u001B[32m'tas'\u001B[0m: \u001B[32m'OBS6_ERA5_reanaly_1_day_tas_2000-2005.nc'\u001B[0m,\n",
+       "        \u001B[32m'rsds'\u001B[0m: \u001B[32m'OBS6_ERA5_reanaly_1_day_rsds_2000-2005.nc'\u001B[0m,\n",
+       "        \u001B[32m'evspsblpot'\u001B[0m: \u001B[32m'Derived_Makkink_evspsblpot.nc'\u001B[0m\n",
+       "    \u001B[1m}\u001B[0m\n",
+       "\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -323,7 +323,7 @@
     "    plt.subplot(2,2, plot_counter)\n",
     "    data[name.split(\" \")[-1]].plot()\n",
     "    plt.title(f\"{name.split(\" \")[0]}\")\n",
-    "    plot_counter+=1\n",
+    "    plot_counter += 1\n",
     "\n",
     "plt.suptitle(\"ERA5 LumpedMakkink Data\", fontsize=20)\n",
     "plt.tight_layout()"
