--- a/book/some_content/forcing/era5_forcing_own_shapefile.ipynb
+++ b/book/some_content/forcing/era5_forcing_own_shapefile.ipynb
@@ -39,7 +39,7 @@
     "### Make your own shapefile\n",
     "\n",
     "There are several ways to make shapefiles:\n",
-    "1. Make one using GIS\n",
+    "1. Make one using Arcgis.\n",
     "2. Get the station.json from a GRDC station, which can be [converted](https://github.com/MarkMelotto/geojson_to_shapefile) into a shapefile or multiple if you have a bigger area.\n",
     "\n",
     "You also need 5 different files:\n",
