updated CMIP future and fixed a typo

--- a/book/some_content/forcing/cmip_future.ipynb
+++ b/book/some_content/forcing/cmip_future.ipynb
@@ -249,7 +249,7 @@
     "1. pr: precipitation\n",
     "2. tas: temperature\n",
     "3. rsds: incoming shortwave radiation\n",
-    "4. evspsblpot: potential evaporation (note that this is calculated, using Makking)"
+    "4. evspsblpot: potential evaporation (note that this is calculated, using Makkink)"
    ],
    "id": "7f9e9c75c38561e2"
   },
@@ -269,12 +269,6 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "SSP126_CMIP_data = {'precipitation pr': xr.open_dataset(SSP126_CMIP_forcing['pr']),\n",
-    "             'temperature tas': xr.open_dataset(SSP126_CMIP_forcing['tas']),\n",
-    "             'incoming_shortwave_radiation rsds': xr.open_dataset(SSP126_CMIP_forcing['rsds']),\n",
-    "             'potential_evaporation evspsblpot': xr.open_dataset(SSP126_CMIP_forcing['evspsblpot'])\n",
-    "}\n",
-    "\n",
     "all_CMIP_data = {'ssp126': {'precipitation pr': xr.open_dataset(SSP126_CMIP_forcing['pr']),\n",
     "             'temperature tas': xr.open_dataset(SSP126_CMIP_forcing['tas']),\n",
     "             'incoming_shortwave_radiation rsds': xr.open_dataset(SSP126_CMIP_forcing['rsds']),\n",
@@ -297,9 +291,12 @@
     "for climate_scenario, all_data in all_CMIP_data.items():\n",
     "    for name, data in all_CMIP_data[climate_scenario].items():\n",
     "        plt.subplot(2,2, plot_counter)\n",
-    "        data[name.split(\" \")[-1]].plot()\n",
+    "        data[name.split(\" \")[-1]].plot(label=climate_scenario)\n",
     "        plt.title(f\"{name.split(\" \")[0]}\")\n",
+    "        plt.legend()\n",
     "        plot_counter += 1\n",
+    "\n",
+    "    plot_counter = 1\n",
     "\n",
     "plt.suptitle(\"Future CMIP6 LumpedMakkink Data\", fontsize=20)\n",
     "plt.tight_layout()"
