--- a/book/some_content/forcing/cmip_historic.ipynb
+++ b/book/some_content/forcing/cmip_historic.ipynb
@@ -151,7 +151,7 @@
     "1. pr: precipitation\n",
     "2. tas: temperature\n",
     "3. rsds: incoming shortwave radiation\n",
-    "4. evspsblpot: potential evaporation (note that this is calculated, using Makking)"
+    "4. evspsblpot: potential evaporation (note that this is calculated, using Makkink)"
    ],
    "id": "64468dc6fd4c8f5e"
   },
