--- a/book/some_content/forcing/era5_forcing_caravan_shapefile.ipynb
+++ b/book/some_content/forcing/era5_forcing_caravan_shapefile.ipynb
@@ -268,7 +268,7 @@
     "1. pr: precipitation\n",
     "2. tas: temperature\n",
     "3. rsds: incoming shortwave radiation\n",
-    "4. evspsblpot: potential evaporation (note that this is calculated, using Makking)"
+    "4. evspsblpot: potential evaporation (note that this is calculated, using Makkink)"
    ]
   },
   {
