start of the models section

--- a/book/some_content/first_model_run/interface.ipynb
+++ b/book/some_content/first_model_run/interface.ipynb
@@ -161,7 +161,7 @@
     "This setup is model dependent. And again here it is mostly pseudo-code.\n",
     "\n",
     "Now we can initialize the model.\n",
-    "This will start a container on the SURF super computer with the model and the forcing data."
+    "This will start a container (see [what]() for more info on containers) on the SURF super computer with the model and the forcing data."
    ],
    "id": "944bc50e5722451d"
   },
