small update to first model run

--- a/book/some_content/first_model_run/first_run.ipynb
+++ b/book/some_content/first_model_run/first_run.ipynb
@@ -18,7 +18,7 @@
     "A model needs 3 things to run:\n",
     "1. A region (or basin) to run the model on.\n",
     "2. A time window to run the model on.\n",
-    "3. Forcing data for the model to use.\n",
+    "3. Forcing data for the model to use (+ parameters (set)).\n",
     "\n",
     "Again we are starting with the imports:"
    ],
