update to first model run

--- a/book/some_content/first_model_run/first_run.ipynb
+++ b/book/some_content/first_model_run/first_run.ipynb
@@ -13,7 +13,7 @@
     "Here we will choose a region, get the forcing data, and run a model.\n",
     "We will be using the Caravan forcing data and the [HBV model](https://hess.copernicus.org/articles/26/1371/2022/).\n",
     "Mainly because these are the easiest to use and understand.\n",
-    "More details of the HBV model and how to use it in eWaterCycle can be found [here]().\n",
+    "More details of the HBV model and how to use it in eWaterCycle can be found [here](https://www.ewatercycle.org/getting-started/main/some_content/different_models.html).\n",
     "\n",
     "A model needs 3 things to run:\n",
     "1. A region (or basin) to run the model on.\n",
@@ -172,12 +172,12 @@
     "\n",
     "Now that we have the forcing data, we can create a model run.\n",
     "For the HBV model, we need to set up the parameters and the initial conditions.\n",
-    "For more details about calibration, please look at this [section]().\n",
+    "For more details about calibration, please look at this [section](https://www.ewatercycle.org/getting-started/main/some_content/workflows/calibrating_models.html).\n",
     "\n",
     "For now we have some optimized parameters for a specific research question and initial conditions for this specific region.\n",
     "For the initial conditions for the storages we can specify an array of starting values.\n",
     "If you don’t the model will start ‘empty’ and needs some timesteps to ‘fill up’.\n",
-    "Especially for the rootzone storage it helps to not start empty. Note that all units are in mm"
+    "Especially for the rootzone storage it helps to not start empty. Note that all units are in mm."
    ],
    "id": "1eb8f4bbc6743d10"
   },
