--- a/book/some_content/first_model_run/interface.ipynb
+++ b/book/some_content/first_model_run/interface.ipynb
@@ -107,7 +107,7 @@
     "- ERA5 forcing data\n",
     "- CMIP6 forcing data\n",
     "\n",
-    "More details about the forcing data can be found [here]()."
+    "More details about the forcing data can be found [here](https://www.ewatercycle.org/getting-started/main/some_content/generate_forcing.html)."
    ],
    "id": "32b89f38a42a78cd"
   },
@@ -161,7 +161,7 @@
     "This setup is model dependent. And again here it is mostly pseudo-code.\n",
     "\n",
     "Now we can initialize the model.\n",
-    "This will start a container (see [what]() for more info on containers) on the SURF super computer with the model and the forcing data."
+    "This will start a container (see [what](https://www.ewatercycle.org/getting-started/main/some_content/why/what.html) for more info on containers) on the SURF super computer with the model and the forcing data."
    ],
    "id": "944bc50e5722451d"
   },
