update to generating the forcing

--- a/book/some_content/forcing/era5_forcing_caravan_shapefile.ipynb
+++ b/book/some_content/forcing/era5_forcing_caravan_shapefile.ipynb
@@ -120,12 +120,12 @@
    "outputs": [],
    "source": [
     "'''Generating the camels forcing'''\n",
-    "# camels_forcing = ewatercycle.forcing.sources['CaravanForcing'].generate(\n",
-    "#     start_time=experiment_start_date,\n",
-    "#     end_time=experiment_end_date,\n",
-    "#     directory=forcing_path_caravan,\n",
-    "#     basin_id=camels_id,\n",
-    "# )\n",
+    "camels_forcing = ewatercycle.forcing.sources['CaravanForcing'].generate(\n",
+    "    start_time=experiment_start_date,\n",
+    "    end_time=experiment_end_date,\n",
+    "    directory=forcing_path_caravan,\n",
+    "    basin_id=camels_id,\n",
+    ")\n",
     "\n",
     "'''Loading the camels forcing'''\n",
     "camels_forcing = ewatercycle.forcing.sources['CaravanForcing'].load(directory=forcing_path_caravan)"
